backend/kustomize/overlays/staging/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: webserver
          image: WEBSERVER
          ports:
            - name: http
              containerPort: 80
