backend/kustomize/overlays/staging/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/PATH)$ $1/ permanent;
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: HOST
      http:
        paths:
          - backend:
              serviceName: service-http
              servicePort: 80
            path: /PATH
  tls:
    - hosts:
        - kommul-dev.eurac.edu
      secretName: kommul-dev.eurac.edu-NAME-tls
